# doc2md

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: release-build.yml  tests.yml
docs/: 功能迭代.md
src/: CMakeLists.txt  main.cpp
src/doc2md/: detail_parsers.cpp  document_converter.cpp
